--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,12 @@ jobs:
           java-version: 1.8
         
       - name: Firely.Terminal (GitHub Actions)
-        uses: FirelyTeam/firely-terminal-pipeline@v0.1.0-beta2
+        uses: FirelyTeam/firely-terminal-pipeline@v0.2.0-alpha4
         with:
           PATH_TO_CONFORMANCE_RESOURCES: extensions terminologie/codesystems terminologie/valuesets ressourcen-profile logical-models
           PATH_TO_EXAMPLES: beispiele
           DOTNET_VALIDATION_ENABLED: true
           JAVA_VALIDATION_ENABLED: true
+          OUTPUT_FORMAT: SUMMARY
   
           EXPECTED_FAILS: VALIDATION_EXAMPLES_JAVA # ATC, http://fdasis.nlm.nih.gov validation
