--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,6 @@ jobs:
           PATH_TO_EXAMPLES: beispiele
           DOTNET_VALIDATION_ENABLED: true
           JAVA_VALIDATION_ENABLED: true
-          OUTPUT_FORMAT: SUMMARY
+          OUTPUT_FORMAT: RAW
   
           EXPECTED_FAILS: VALIDATION_EXAMPLES_JAVA # ATC, http://fdasis.nlm.nih.gov validation
