--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,4 +47,7 @@ jobs:
           JAVA_VALIDATION_ENABLED: true
           OUTPUT_FORMAT: RAW
   
-          EXPECTED_FAILS: VALIDATION_EXAMPLES_JAVA # ATC, http://fdasis.nlm.nih.gov validation
+          # Error @ Medication.ingredient[0].item.ofType(CodeableConcept).coding[0] (line 28, col21) : The code "82F2G7BL4E" is not valid in the system http://fdasis.nlm.nih.gov; The code provided (http://fdasis.nlm.nih.gov#82F2G7BL4E) is not valid in the value set 'All codes known to the system' (from http://tx.fhir.org/r4) for 'http://fdasis.nlm.nih.gov#82F2G7BL4E'
+          # Error @ Medication.code.coding[2] (line 21, col14) : The code "V06DC01" is not valid in the system http://www.whocc.no/atc; The code provided (http://www.whocc.no/atc#V06DC01) is not valid in the value set 'All codes known to the system' (from http://tx.fhir.org/r4) for 'http://www.whocc.no/atc#V06DC01'
+          # Error @ Medication.ingredient[1] (line 48, col8) : Medication.ingredient.item[x]:itemCodeableConcept: minimum required = 1, but only found 0 (from https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/StructureDefinition/Medication)
+          EXPECTED_FAILS: VALIDATION_EXAMPLES_JAVA
