--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,3 +51,5 @@ jobs:
           # Error @ Medication.code.coding[2] (line 21, col14) : The code "V06DC01" is not valid in the system http://www.whocc.no/atc; The code provided (http://www.whocc.no/atc#V06DC01) is not valid in the value set 'All codes known to the system' (from http://tx.fhir.org/r4) for 'http://www.whocc.no/atc#V06DC01'
           # Error @ Medication.ingredient[1] (line 48, col8) : Medication.ingredient.item[x]:itemCodeableConcept: minimum required = 1, but only found 0 (from https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/StructureDefinition/Medication)
           EXPECTED_FAILS: VALIDATION_EXAMPLES_JAVA
+          SIMPLIFIER_USERNAME: ${{ secrets.SIMPLIFIER_USERNAME }}
+          SIMPLIFIER_PASSWORD: ${{ secrets.SIMPLIFIER_PASSWORD }}
