--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
       - name: Firely.Terminal (GitHub Actions)
         uses: FirelyTeam/firely-terminal-pipeline@v0.2.0
         with:
-          PATH_TO_CONFORMANCE_RESOURCES: extensions terminologie/codesystems terminologie/valuesets ressourcen-profile logical-models
-          PATH_TO_EXAMPLES: beispiele
+          PATH_TO_CONFORMANCE_RESOURCES: fsh-generated/resources terminologie/codesystems logical-models
+          PATH_TO_EXAMPLES: fsh-generated/resources
           DOTNET_VALIDATION_ENABLED: true
           JAVA_VALIDATION_ENABLED: true
           OUTPUT_FORMAT: RAW
