--- a/package.json
+++ b/package.json
@@ -1,25 +1,13 @@
 {
   "name": "de.medizininformatikinitiative.kerndatensatz.medikation",
-  "version": "1.0.8",
+  "version": "1.0.11",
   "description": "Medizininformatik Initiative - Modul Medikation",
-  "author": "alexanderzautke",
+  "author": "juliansass",
   "fhirVersions": [
     "4.0.1"
   ],
-  "devDependencies": null,
-  "canonicals": null,
   "dependencies": {
     "de.medizininformatikinitiative.kerndatensatz.meta": "1.0.3",
     "hl7.fhir.uv.ips": "1.0.0"
-  },
-  "keywords": null,
-  "license": null,
-  "homepage": null,
-  "directories": null,
-  "title": null,
-  "fhir-version-list": null,
-  "maintainers": null,
-  "canonical": null,
-  "url": null,
-  "jurisdiction": null
+  }
 }
