--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ ImplementationGuide-medizininformatikinitiative-modulmedikation-implementationgu
 menu.xml
 UML-2.0.puml
 ImplementationGuide-de.medizininformatikinitiative.kerndatensatz.medikation.json
+validator_cli.jar
