--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -5,7 +5,7 @@ applyExtensionMetadataToRoot: false
 id: de.medizininformatikinitiative.kerndatensatz.medikation
 name: MII_IG_Medikation_2_0
 status: active
-version: "2.0.0-ballot"
+version: "2.0.0"
 copyrightYear: 2019+
 releaseLabel: ci-build
 publisher:
