Updated KDS images and IG qc

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ UML-2.0.puml
 ImplementationGuide-de.medizininformatikinitiative.kerndatensatz.medikation.json
 validator_cli.jar
 .vscode
+ImplementationGuide-mii-ig-medikation*
