--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -1,11 +1,12 @@
-canonical: https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/ImplementationGuide
+canonical: https://www.medizininformatik-initiative.de/fhir/core/modul-medikation
 fhirVersion: 4.0.1
 FSHOnly: false
 applyExtensionMetadataToRoot: false
-id: de.medizininformatikinitiative.kerndatensatz.medikation
-name: MII_IG_Medikation_2_0
+id: mii-ig-medikation-v2
+name: MII_IG_Medikation_v2
 status: active
 version: "2.0.0"
+packageId: de.medizininformatikinitiative.kerndatensatz.medikation
 copyrightYear: 2019+
 releaseLabel: ci-build
 publisher:
