Updated qc rules

--- a/qc/custom.rules.yaml
+++ b/qc/custom.rules.yaml
@@ -28,8 +28,10 @@
     - /**/*.json
     - "!package.json"
     - "!/**/CodeSystem-ATC*.json"
+    - "!/**/MII_CS_IHE_XDS_Fallkontext_bei_Dokumentenerstellung.json"
 
 - name: naming-convention-name
+  filter: (StructureDefinition or ValueSet or CodeSystem or ConceptMap or StructureMap or NamingSystem or SearchParameter or CapabilityStatement or OperationDefinition or ImplementationGuide).exists()
   status: "Checking if all resource names follow the naming convention"
   predicate: name.exists() implies name.matches('^MII_(PR|EX|LM|VS|CS|CM|SM|NS|SP|CPS|OD|IG|EXA)_Medikation')
   error-message: "resource name naming convention mismatch"
@@ -38,8 +40,10 @@
     - /**/*.json
     - "!package.json"
     - "!/**/CodeSystem-ATC*.json"
+    - "!/**/MII_CS_IHE_XDS_Fallkontext_bei_Dokumentenerstellung.json"
 
 - name: naming-convention-title
+  filter: (StructureDefinition or ValueSet or CodeSystem or ConceptMap or StructureMap or NamingSystem or SearchParameter or CapabilityStatement or OperationDefinition or ImplementationGuide).exists()
   status: "Checking if all resource titles follow the naming convention"
   predicate: title.exists() implies title.matches('^MII (PR|EX|LM|VS|CS|CM|SM|NS|SP|CPS|OD|IG|EXA) Medikation')
   error-message: "resource name naming convention mismatch"
@@ -48,8 +52,10 @@
     - /**/*.json
     - "!package.json"
     - "!/**/CodeSystem-ATC*.json"
+    - "!/**/MII_CS_IHE_XDS_Fallkontext_bei_Dokumentenerstellung.json"
 
 - name: naming-convention-url
+  filter: (StructureDefinition or ValueSet or CodeSystem or ConceptMap or StructureMap or NamingSystem or SearchParameter or CapabilityStatement or OperationDefinition or ImplementationGuide).exists()
   status: "Checking if all resource urls follow the naming convention"
   predicate: url.exists() implies url.matches('^https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/')
   error-message: "resource url naming convention mismatch"
@@ -58,3 +64,4 @@
     - /**/*.json
     - "!package.json"
     - "!/**/CodeSystem-ATC*.json"
+    - "!/**/MII_CS_IHE_XDS_Fallkontext_bei_Dokumentenerstellung.json"
