--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Firely.Terminal (GitHub Actions)
         uses: FirelyTeam/firely-terminal-pipeline@v0.4.0
         with:
-          PATH_TO_CONFORMANCE_RESOURCES: terminologie/codesystems fsh-generated/resources
+          PATH_TO_CONFORMANCE_RESOURCES: fsh-generated/resources terminologie/codesystems
           PATH_TO_EXAMPLES: fsh-generated/resources
           PATH_TO_QUALITY_CONTROL_RULES: qc/custom
           DOTNET_VALIDATION_ENABLED: true
