--- a/package.json
+++ b/package.json
@@ -6,6 +6,27 @@
   "fhirVersions": [
     "4.0.1"
   ],
+  "keywords": [
+    "MII",
+    "KDS",
+    "Medikation",
+    "Medication"
+  ],
+  "license": "CC0-1.0",
+  "homepage": "https://www.medizininformatik-initiative.de/",
+  "directories" : {
+    "lib" : "package",
+    "example" : "examples"
+  },
+  "title": "MII IG Medikation",
+  "maintainers" : [
+    {
+      "name" : "Medizininformatik Initiative",
+      "url" : "https://www.medizininformatik-initiative.de/"
+    }
+  ],
+  "canonicals": "https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/ImplementationGuide/mii-ig-medikation-v2",
+  "jurisdiction": "http://unstats.un.org/unsd/methods/m49/m49.htm#276",
   "dependencies": {
     "de.medizininformatikinitiative.kerndatensatz.meta": "1.0.3",
     "hl7.fhir.uv.ips": "1.0.0"
