--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -2,10 +2,10 @@ canonical: https://www.medizininformatik-initiative.de/fhir/core/modul-medikatio
 fhirVersion: 4.0.1
 FSHOnly: false
 applyExtensionMetadataToRoot: false
-id: mii-ig-medikation-v2
-name: MII_IG_Medikation_v2
+id: mii-ig-medikation-de-2024
+name: MII_IG_Medikation_2024
 status: active
-version: "2.0.0"
+version: "2024.0.0"
 packageId: de.medizininformatikinitiative.kerndatensatz.medikation
 copyrightYear: 2019+
 releaseLabel: ci-build
