--- a/qc/custom.rules.yaml
+++ b/qc/custom.rules.yaml
@@ -5,7 +5,7 @@
   filter: (StructureDefinition or ValueSet or CodeSystem or CapabilityStatement or SearchParameter or ConceptMap or ImplementationGuide).exists()
   # Excluding NamingSystem as they have no version
   status: "Checking if all resources have version filled"
-  predicate: version.exists() and (version in ('2.0.0') or version in ('1.0.11'))
+  predicate: version.exists() and (version in ('2024.0.0'))
   error-message: "version not filled (correctly)"
   files:
     - /**/*.xml
