--- a/implementation-guides/mii-ig-medikation-de-v2024/MIIIGModulMedikation/TechnischeImplementierung/FHIR-Profile/Medication/toc.yaml
+++ b/implementation-guides/mii-ig-medikation-de-v2024/MIIIGModulMedikation/TechnischeImplementierung/FHIR-Profile/Medication/toc.yaml
@@ -1,4 +1,6 @@
 - name: Index
   filename: Index.page.md
-- name: Extensions
-  filename: Extensions.page.md
+- name: 'Extension: Wirkstofftyp'
+  filename: Extension-Wirkstofftyp.page.md
+- name: 'Extension: Wirkstoffrelation'
+  filename: Extension-Wirkstoffrelation.page.md
