--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ ImplementationGuide-de.medizininformatikinitiative.kerndatensatz.medikation.json
 validator_cli.jar
 .vscode
 ImplementationGuide-mii-ig-medikation*
+fsh-index.json
+fsh-index.txt
