--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ validator_cli.jar
 ImplementationGuide-mii-ig-medikation*
 fsh-index.json
 fsh-index.txt
+MII_CS_IHE_XDS_Fallkontext_bei_Dokumentenerstellung.json
