--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "de.medizininformatikinitiative.kerndatensatz.medikation",
-  "version": "2.0.0",
+  "version": "2024.0.0",
   "description": "Medizininformatik Initiative - Modul Medikation",
   "author": "juliansass",
   "fhirVersions": [
@@ -25,10 +25,11 @@
       "url" : "https://www.medizininformatik-initiative.de/"
     }
   ],
-  "canonicals": "https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/ImplementationGuide/mii-ig-medikation-v2",
+  "canonicals": "https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/ImplementationGuide/mii-ig-medikation-v2024",
   "jurisdiction": "http://unstats.un.org/unsd/methods/m49/m49.htm#276",
   "dependencies": {
     "de.medizininformatikinitiative.kerndatensatz.meta": "1.0.3",
-    "hl7.fhir.uv.ips": "1.0.0"
+    "hl7.fhir.uv.ips": "1.0.0",
+    "de.ihe-d.terminology": "3.0.0"
   }
 }
