--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ ImplementationGuide-mii-ig-medikation*
 fsh-index.json
 fsh-index.txt
 MII_CS_IHE_XDS_Fallkontext_bei_Dokumentenerstellung.json
+index.html
