--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,10 +40,14 @@ jobs:
           OUTPUT_FORMAT: RAW
           SIMPLIFIER_USERNAME: ${{ secrets.SIMPLIFIER_USERNAME }}
           SIMPLIFIER_PASSWORD: ${{ secrets.SIMPLIFIER_PASSWORD }}
-          # SUSHI_ENABLED: false
-          JAVA_VALIDATOR_VERSION: 6.3.2
+          JAVA_VALIDATOR_VERSION: 6.3.29
+          SUSHI_ENABLED: true 
+          SUSHI_VERSION: 3.12.0
 
-          # Error @ Medication.ingredient[0].item.ofType(CodeableConcept).coding[0] (line 28, col21) : The code "82F2G7BL4E" is not valid in the system http://fdasis.nlm.nih.gov; The code provided (http://fdasis.nlm.nih.gov#82F2G7BL4E) is not valid in the value set 'All codes known to the system' (from http://tx.fhir.org/r4) for 'http://fdasis.nlm.nih.gov#82F2G7BL4E'
-          # Error @ Medication.code.coding[2] (line 21, col14) : The code "V06DC01" is not valid in the system http://www.whocc.no/atc; The code provided (http://www.whocc.no/atc#V06DC01) is not valid in the value set 'All codes known to the system' (from http://tx.fhir.org/r4) for 'http://www.whocc.no/atc#V06DC01'
-          # Error @ Medication.ingredient[1] (line 48, col8) : Medication.ingredient.item[x]:itemCodeableConcept: minimum required = 1, but only found 0 (from https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/StructureDefinition/Medication)
-          # EXPECTED_FAILS: VALIDATION_CONFORMANCE_DOTNET VALIDATION_CONFORMANCE_JAVA VALIDATION_EXAMPLES_JAVA
+      - name: Add & Commit
+        uses: EndBug/add-and-commit@v9
+        with:
+          committer_name: GitHub Actions Bot
+          committer_email: ActionBot@github.com
+          add: 'fsh-generated/resources/'
+          message: auto-generated FHIR files by GitHub Actions (CI FSH to FHIR Validation)
