--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -3,7 +3,7 @@ fhirVersion: 4.0.1
 FSHOnly: false
 applyExtensionMetadataToRoot: false
 id: mii-ig-medikation-de-2025
-name: MII_IG_Medikation_2025
+name: MII_IG_Medikation
 status: active
 version: "2025.0.0"
 packageId: de.medizininformatikinitiative.kerndatensatz.medikation
@@ -14,7 +14,7 @@ publisher:
   url: https://www.medizininformatik-initiative.de/
 dependencies:
   hl7.fhir.uv.ips: 1.0.0
-  de.medizininformatikinitiative.kerndatensatz.meta: 1.0.3
+  de.medizininformatikinitiative.kerndatensatz.meta: 2025.0.0-alpha1
   de.ihe-d.terminology: 3.0.0
 menu:
   Home: index.html
