--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "jurisdiction": "http://unstats.un.org/unsd/methods/m49/m49.htm#276",
   "dependencies": {
     "hl7.fhir.r4.core" : "4.0.1",
+    "de.basisprofil.r4": "1.5.0",
     "de.medizininformatikinitiative.kerndatensatz.meta": "2025.0.0-alpha1",
     "hl7.fhir.uv.ips": "1.0.0",
     "de.ihe-d.terminology": "3.0.0"
