--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -15,6 +15,7 @@ publisher:
 dependencies:
   hl7.fhir.uv.ips: 1.0.0
   de.medizininformatikinitiative.kerndatensatz.meta: 2025.0.0-alpha1
+  de.basisprofil.r4: 1.5.0
   de.ihe-d.terminology: 3.0.0
 menu:
   Home: index.html
