--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -17,5 +17,7 @@ dependencies:
   de.medizininformatikinitiative.kerndatensatz.meta: 2025.0.0-alpha4
   de.basisprofil.r4: 1.5.0
   de.ihe-d.terminology: 3.0.1
+
 menu:
   Home: index.html
+  Artifacts: artifacts.html
