--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
       "url" : "https://www.medizininformatik-initiative.de/"
     }
   ],
-  "canonicals": "https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/ImplementationGuide/mii-ig-medikation-v2025",
+  "canonicals": "https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/ImplementationGuide/mii-ig-medikation",
   "jurisdiction": "http://unstats.un.org/unsd/methods/m49/m49.htm#276",
   "dependencies": {
     "hl7.fhir.r4.core" : "4.0.1",
-    "de.basisprofil.r4": "1.5.0",
-    "de.medizininformatikinitiative.kerndatensatz.meta": "2025.0.0-alpha4",
-    "hl7.fhir.uv.ips": "1.0.0",
+    "de.basisprofil.r4": "1.5.x",
+    "de.medizininformatikinitiative.kerndatensatz.meta": "2025.0.x",
+    "hl7.fhir.uv.ips": "1.1.x",
     "de.ihe-d.terminology": "3.0.1"
   }
 }
