--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -13,9 +13,9 @@ publisher:
   name: Medizininformatik Initiative
   url: https://www.medizininformatik-initiative.de/
 dependencies:
-  hl7.fhir.uv.ips: 1.0.0
-  de.medizininformatikinitiative.kerndatensatz.meta: 2025.0.0-alpha4
-  de.basisprofil.r4: 1.5.0
+  hl7.fhir.uv.ips: 1.1.x
+  de.medizininformatikinitiative.kerndatensatz.meta: 2025.0.x
+  de.basisprofil.r4: 1.5.x
   de.ihe-d.terminology: 3.0.1
 
 menu:
