--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -18,6 +18,14 @@ dependencies:
   de.basisprofil.r4: 1.5.x
   de.ihe-d.terminology: 3.0.1
 
+extension:
+  - url: https://www.medizininformatik-initiative.de/fhir/modul-meta/StructureDefinition/mii-ex-meta-license-codeable
+    valueCodeableConcept:
+      coding:
+        - system: http://spdx.org/licenses/
+          code: CC-BY-4.0
+          display: Creative Commons Attribution 4.0 International License
+
 menu:
   Home: index.html
   Artifacts: artifacts.html
