--- a/qc/custom.rules.yaml
+++ b/qc/custom.rules.yaml
@@ -17,6 +17,11 @@
   status: "Checking if all instances have correct version filled"
   predicate: select(meta.profile).where($this.startsWith('https://www.medizininformatik-initiative.de/fhir/core/modul-medikation/StructureDefinition/') and $this.endsWith('2025.0.1')).exists()
   error-message: "instance version not filled (correctly)"
+  files:
+    - /**/*.xml
+    - /**/*.json
+    - "!package.json"
+    - "!/**/Procedure-mii-exa-medikation-procedure-thiotepa.json"
 
 - action: Check for valid ids
   # See https://github.com/FirelyTeam/firely-net-sdk/issues/1773
