--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
   "dependencies": {
     "hl7.fhir.r4.core" : "4.0.1",
     "de.basisprofil.r4": "1.5.x",
-    "de.medizininformatikinitiative.kerndatensatz.meta": "2025.0.x",
-    "hl7.fhir.uv.ips": "1.1.x",
-    "de.ihe-d.terminology": "3.0.1"
+    "de.medizininformatikinitiative.kerndatensatz.meta": "2026.0.x",
+    "hl7.fhir.uv.ips": "2.0.0",
+    "de.ihe-d.terminology": "3.0.1",
+    "de.fhir.medication": "1.0.x"
   }
 }
