--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -13,10 +13,11 @@ publisher:
   name: Medizininformatik Initiative
   url: https://www.medizininformatik-initiative.de/
 dependencies:
-  hl7.fhir.uv.ips: 1.1.x
-  de.medizininformatikinitiative.kerndatensatz.meta: 2025.0.x
+  hl7.fhir.uv.ips: 2.0.0
+  de.medizininformatikinitiative.kerndatensatz.meta: 2026.0.x
   de.basisprofil.r4: 1.5.x
   de.ihe-d.terminology: 3.0.1
+  de.fhir.medication: 1.0.x
 
 extension:
   - url: https://www.medizininformatik-initiative.de/fhir/modul-meta/StructureDefinition/mii-ex-meta-license-codeable
